--- a/styles.css
+++ b/styles.css
@@ -695,8 +695,7 @@
 .path-blocks-vitrina .filterfulltext {
     width: 100%;
     max-width: 500px;
-    margin: 20px auto;
-    padding: 0 10px;
+    margin: 10px auto;
     border-radius: 10px;
 }
 
@@ -775,6 +774,18 @@
 .vitrina-filter-responsivebutton {
     display: none;
 }
+
+
+.filtersortgroup .row .filtersort {
+    padding-right: 2px;
+    padding-bottom: 10px;
+}
+
+.filtersortgroup .row .filtersortdirection {
+    padding-left: 1px;
+    padding-bottom: 10px;
+}
+
 /* End of Filter controls */
 
 @media (max-width: 512px) {
