Catalog页全文搜索框添加placeholder

--- a/templates/catalog.mustache
+++ b/templates/catalog.mustache
@@ -63,7 +63,7 @@
             {{#filterproperties}}
                 {{#fulltext}}
                     <div class="filterfulltext input-group">
-                        <input type="text" class="form-control" name="q">
+                        <input type="text" class="form-control" name="q" placeholder="{{#str}}fulltextsearch, block_vitrina{{/str}}">
                         <div class="input-group-append">
                             <button class="btn btn-primary" type="button">{{#pix}}i/search, core{{/pix}}</button>
                         </div>
