--- a/templates/two_cols_nodolab/styles.css
+++ b/templates/two_cols_nodolab/styles.css
@@ -74,6 +74,7 @@
 
 .block_vitrina-courseslist .coursebox .panel-foot {
     padding-bottom: 20px;
+    border-top: 1px solid #e7e7e7;
 }
 
 .block_vitrina-courseslist .coursebox .panel-foot .btn {
@@ -81,6 +82,36 @@
     color: var(--primary, #000);
     background-color: var(--light, #f1f1f1);
     padding: 8px 16px;
+}
+
+.block_vitrina-courseslist .coursebox .course-extra-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 20px 0;
+    font-size: 90%;
+}
+
+.block_vitrina-courseslist .coursebox .course-type-left {
+    display: flex;
+    align-items: center;
+}
+
+.block_vitrina-courseslist .coursebox .course-type-label {
+    margin-left: 2px;
+}
+
+.block_vitrina-courseslist .coursebox .course-enrolled-right {
+    text-align: right;
+    font-weight: bold;
+}
+
+.block_vitrina-courseslist .coursebox .course-enrolled-label {
+    color: #aaaaaa;
+}
+
+.block_vitrina-courseslist .coursebox .vitrina-course-type-icon .icon {
+    margin: 0;
 }
 
 .block_vitrina-courseslist .coursebox .panel-foot .btn:hover {
