--- a/templates/cesil/course.mustache
+++ b/templates/cesil/course.mustache
@@ -41,7 +41,7 @@
     }
 }}
 
-<div class="panel panel-default coursebox coursecategory-{{category}} state-{{#active}}active{{/active}}{{^active}}waiting{{/active}} {{#premium}}type-premium{{/premium}}{{#completed}} coursecompleted{{/completed}}">
+<div class="panel panel-default coursebox coursecategory-{{category}} state-{{#active}}active{{/active}}{{^active}}waiting{{/active}} {{#premium}}type-premium{{/premium}}{{#completed}} coursecompleted{{/completed}}" data-vitrina-detailurl="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}" data-vitrina-detailtarget="{{opendetailstarget}}">
     <div class="panel-heading">
         <a class="" title="{{{shortname}}}" href="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}">
             {{{fullname}}}
@@ -78,9 +78,21 @@
                 <span>{{#str}}completepercent, block_vitrina, {{progress}}{{/str}}</span>
             </div>
         {{/hasprogress}}
-        <a class="coursebtn submit btn btn-info btn-sm" href="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}" target="{{opendetailstarget}}">
-            <span class="get_stringlink">{{# str }} showmore, block_vitrina {{/ str }}</span>
-        </a>
+        <div class="course-extra-row">
+            <div class="course-type-left">
+                {{#hascoursetype}}
+                    <span class="course-type">
+                        {{{coursetypeiconhtml}}}
+                        <span class="course-type-label">{{coursetype}}</span>
+                    </span>
+                {{/hascoursetype}}
+            </div>
+            <div class="course-enrolled-right">
+                {{#enrolled}}
+                    <span class="course-enrolled-label">{{#str}} enrolledshort, block_vitrina {{/str}}</span>
+                {{/enrolled}}
+            </div>
+        </div>
     </div>
     {{^active}}
         <div class="waiting-label">{{#str}}waiting, block_vitrina{{/str}}</div>
