--- a/templates/two_cols/course.mustache
+++ b/templates/two_cols/course.mustache
@@ -41,7 +41,7 @@
     }
 }}
 
-<div class="panel panel-default coursebox coursecategory-{{category}} state-{{#active}}active{{/active}}{{^active}}waiting{{/active}} {{#premium}}type-premium{{/premium}}{{#completed}} coursecompleted{{/completed}}">
+<div class="panel panel-default coursebox coursecategory-{{category}} state-{{#active}}active{{/active}}{{^active}}waiting{{/active}} {{#premium}}type-premium{{/premium}}{{#completed}} coursecompleted{{/completed}}" data-vitrina-detailurl="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}" data-vitrina-detailtarget="{{opendetailstarget}}">
     <div class="panel-body clearfix">
         <a class="" title="{{{shortname}}}" href="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}" target="{{opendetailstarget}}">
             <div class="courseimage" {{#imagepath}}style="background-image: url({{imagepath}});"{{/imagepath}}></div>
@@ -70,6 +70,21 @@
                 <span>{{#str}}completepercent, block_vitrina, {{progress}}{{/str}}</span>
             </div>
         {{/hasprogress}}
+        <div class="course-extra-row">
+            <div class="course-type-left">
+                {{#hascoursetype}}
+                    <span class="course-type">
+                        {{{coursetypeiconhtml}}}
+                        <span class="course-type-label">{{coursetype}}</span>
+                    </span>
+                {{/hascoursetype}}
+            </div>
+            <div class="course-enrolled-right">
+                {{#enrolled}}
+                    <span class="course-enrolled-label">{{#str}} enrolledshort, block_vitrina {{/str}}</span>
+                {{/enrolled}}
+            </div>
+        </div>
         {{#hasrating}}
             {{#rating}}
             <div class="vitrina-ranking-stars">
