--- a/templates/two_cols/styles.css
+++ b/templates/two_cols/styles.css
@@ -59,6 +59,7 @@
 
 .block_vitrina-courseslist .coursebox .panel-foot {
     padding-bottom: 0;
+    border-top: 1px solid #e7e7e7;
 }
 
 .block_vitrina-courseslist .coursebox .panel-foot .btn {
@@ -67,6 +68,36 @@
     background-color: #f1f1f1;
     padding: 10px 0;
     border-top: 1px solid #e7e7e7;
+}
+
+.block_vitrina-courseslist .coursebox .course-extra-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 15px 10px;
+    font-size: 90%;
+}
+
+.block_vitrina-courseslist .coursebox .course-type-left {
+    display: flex;
+    align-items: center;
+}
+
+.block_vitrina-courseslist .coursebox .course-type-label {
+    margin-left: 2px;
+}
+
+.block_vitrina-courseslist .coursebox .course-enrolled-right {
+    text-align: right;
+    font-weight: bold;
+}
+
+.block_vitrina-courseslist .coursebox .course-enrolled-label {
+    color: #aaaaaa;
+}
+
+.block_vitrina-courseslist .coursebox .vitrina-course-type-icon .icon {
+    margin: 0;
 }
 
 .vitrina-ranking-stars {
