--- a/templates/cesil/course.mustache
+++ b/templates/cesil/course.mustache
@@ -48,7 +48,9 @@
         </a>
     </div>
     <div class="panel-body clearfix">
-        <div class="courseimage" {{#imagepath}}style="background-image: url({{imagepath}});"{{/imagepath}}></div>
+        <a class="courseimage-link" title="{{{shortname}}}" href="{{{baseurl}}}/blocks/vitrina/detail.php?id={{{id}}}" target="{{opendetailstarget}}">
+            <div class="courseimage" {{#imagepath}}style="background-image: url({{imagepath}});"{{/imagepath}}></div>
+        </a>
         {{#hasrating}}
             {{#rating}}
             <div class="vitrina-ranking-stars">
